<resources>
    <string name="app_name">SCRUM Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_number">Номер задачи:</string>
    <string name="task_executor">Исполнитель:</string>
    <string name="task_creator">Создатель:</string>
    <string name="creating_project">Создать проект</string>
    <string name="creating_task">Создать задачу</string>
    <string name="cancel">Отмена</string>
    <string name="set_the_executor">Назначить исполнителя:</string>
    <string name="participants">Участники:</string>
    <!--Меню-->
    <string name="add_participant">Добавить участника</string>
    <string name="remove_participant">Удалить участника</string>
    <string name="change_the_current_project">Сменить проект</string>
    <!--Адаптер<-->
    <string name="item_selected">Выбран элемент спика</string>
    <!--Создание задачи -->
    <string name="task_priority">Приоритет задачи</string>
    <string name="exit">Выйти</string>
    <string name="project_name">Имя проекта</string>
    <!--Статусы -->
    <string name="critical_status">Критическая</string>
    <string name="high_status">Высокая</string>
    <string name="medium_status">Средняя</string>
    <string name="low_status">Низкая</string>
    <!--Роли -->
    <string name="analytic_role">Аналитик</string>
    <string name="designer_role">Дизайнер</string>
    <string name="developer_role">Разработчик</string>
    <string name="scrum_master_role">SCRUM-мастер</string>
    <string name="product_owner_role">Владелец продукта</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_creating">CreatingActivity</string>
    <string name="title_activity_project_creating">ProjectCreatingActivity</string>
    <string name="user_not_found">Пользователь не найден. Попробуйте ввести другой логин или пароль</string>
</resources>
