<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/task_id_static_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/task_number"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/task_id_static_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_priority_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:textSize="@dimen/text_size_giant"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_id_text_view" />

    <TextView
        android:id="@+id/task_executor_static_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_huge"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginTop="@dimen/margin_medium_small"
        android:text="@string/task_executor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_description_text_view" />


    <TextView
        android:id="@+id/task_executor_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_small"
        android:layout_marginLeft="@dimen/margin_medium_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/task_executor_static_text_view"
        app:layout_constraintTop_toTopOf="@id/task_executor_static_text_view" />

    <TextView
        android:id="@+id/task_creator_static_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_huge"
        android:layout_marginTop="@dimen/margin_medium_small"
        android:text="@string/task_creator"
        app:layout_constraintEnd_toEndOf="@id/task_executor_static_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_executor_text_view" />

    <TextView
        android:id="@+id/task_creator_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_small"
        android:layout_marginLeft="@dimen/margin_medium_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/task_creator_static_text_view"
        app:layout_constraintTop_toTopOf="@id/task_creator_static_text_view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>